--- a/content/project-overview.qmd
+++ b/content/project-overview.qmd
@@ -50,7 +50,7 @@ Connectivity influences critical components of freshwater ecosystem structure an
 ![The primary geographic scope — the Bulkley River watershed, excluding the Morice River drainage.](images/geo-scope-bulk.png){#fig-geoscope}
 
 
-The primary geographic scope of this WCRP is the Bulkley River watershed, located in the Middle Skeena River drainage basin in northwestern British Columbia (@fig-geoscope). The scope constitutes the Bulkley River "watershed group" as defined by the [British Columbia Freshwater Atlas](https://catalogue.data.gov.bc.ca/dataset/freshwater-atlas-watershed-groups) (FWA). A consistent spatial framework was necessary to undertake a watershed-selection process at the provincial scale to identify target watersheds to improve freshwater connectivity for salmonids. The Bulkley River watershed was identified by the BC Fish Passage Restoration Initiative as one of four target watersheds for WCRP development @Mazany-Wright2021-do. The Bulkley River watershed has a drainage area of 776,200 ha, spanning from Bulkley Lake in the southeast to the confluence with the Skeena River in the northwest. The watershed is generally divided into the "lower" Bulkley River and the "upper" Bulkley River by the confluence with the Morice River near the town of Houston. Culturally, and economically, important populations of Chinook Salmon (*Oncorhynchus tshawytscha*), Coho Salmon (*Oncorhynchus kisutch*), Sockeye Salmon (*Oncorhynchus nerka*),  the anadromous life history of Rainbow Trout commonly referred to as steelhead (*Oncorhynchus mykiss*) are all found in the watershed, and historically supported Indigenous sustenance and trading economies (@tbl-spn; @Irvine2021). 
+The primary geographic scope of this WCRP is the Bulkley River watershed, located in the Middle Skeena River drainage basin in northwestern British Columbia (@fig-geoscope). The scope constitutes the Bulkley River "watershed group" as defined by the [British Columbia Freshwater Atlas](https://catalogue.data.gov.bc.ca/dataset/freshwater-atlas-watershed-groups) (FWA). A consistent spatial framework was necessary to undertake a watershed-selection process at the provincial scale to identify target watersheds to improve freshwater connectivity for salmonids. The Bulkley River watershed was identified by the BC Fish Passage Restoration Initiative as one of four target watersheds for WCRP development (@Mazany-Wright2021-do). The Bulkley River watershed has a drainage area of 776,200 ha, spanning from Bulkley Lake in the southeast to the confluence with the Skeena River in the northwest. The watershed is generally divided into the "lower" Bulkley River and the "upper" Bulkley River by the confluence with the Morice River near the town of Houston. Culturally, and economically, important populations of Chinook Salmon (*Oncorhynchus tshawytscha*), Coho Salmon (*Oncorhynchus kisutch*), Sockeye Salmon (*Oncorhynchus nerka*),  the anadromous life history of Rainbow Trout commonly referred to as steelhead (*Oncorhynchus mykiss*) are all found in the watershed, and historically supported Indigenous sustenance and trading economies (@tbl-spn; @Irvine2021). 
 
 ```{python echo=FALSE}
 #| label: tbl-spn
@@ -99,7 +99,7 @@ The Bulkley River watershed comprises parts of the traditional territories of tw
 
 - Wet’suwet’en peoples– the Wedzin Kwah (Bulkley River watershed) is part of the larger Wet’suwet’en traditional territory. The hereditary territory is governed by a system made up of five clans – Gilseyhu (Big Frog), Laksilyu (Small Frog), Tsayu (Beaver), Gitdumden (Wolf/Bear) and Laksamshu (Fireweed) – each of which comprises multiple Yikhs (House Groups) represented by hereditary chiefs. The Wet’suwet’en steward the land based on Inuk Nu’at’en (Wet'suwet'en law), and the principle of Yintahk, meaning everything is connected to the land (@OfficeWetsuweten2013, @Irvine2021). It is necessary to receive permission from the appropriate bands (Witset First Nation or Wet'suwet'en first Nation, Skin Tyee, Nee Tahi Buhn, or Burns Lake Band), nation representatives (@OfficeWetsuweten2013), and the individual Yikh chiefs for any work to occur on their territory.
 
-The geographic scope of this WCRP was further refined by identifying “naturally accessible" waterbodies, which are defined as waterbodies that focal species should be able to access in the absence of human-made structures (@fig-strseg). Naturally accessible waterbodies were spatially delineated using fish species observation and distribution data, as well as data on "natural barriers", which are waterfalls greater than 5 m in height and gradient barriers based on literature derived, species-specific swimming abilities. These maps were explored by the planning team to incorporate additional local knowledge, ensure accuracy, and finalize the constraints on naturally accessible waterbodies. All other waterbodies were removed from the project scope. The "naturally accessible" waterbodies formed the foundation for all subsequent analyses and planning steps, including mapping and modelling useable habitat types, quantifying the current connectivity status, goal setting, and action planning @Mazany-Wright2021-rz). 
+The geographic scope of this WCRP was further refined by identifying “naturally accessible" waterbodies, which are defined as waterbodies that focal species should be able to access in the absence of human-made structures (@fig-strseg). Naturally accessible waterbodies were spatially delineated using fish species observation and distribution data, as well as data on "natural barriers", which are waterfalls greater than 5 m in height and gradient barriers based on literature derived, species-specific swimming abilities. These maps were explored by the planning team to incorporate additional local knowledge, ensure accuracy, and finalize the constraints on naturally accessible waterbodies. All other waterbodies were removed from the project scope. The "naturally accessible" waterbodies formed the foundation for all subsequent analyses and planning steps, including mapping and modelling useable habitat types, quantifying the current connectivity status, goal setting, and action planning (@Mazany-Wright2021-rz). 
 
 
 ![Naturally accessible waterbodies within the Bulkley River watershed. These do not represent useable habitat types, but rather identify the waterbodies within which habitat modelling and structure mapping and prioritization were undertaken.](images/accessible-streams-bulk.png){#fig-strseg}
