--- a/references.bib
+++ b/references.bib
@@ -2,8 +2,8 @@
 @book{Agrawal2005-xu,
   title   = {Predicting the potential for historical Coho, Chinook, and
              Steelhead habitat in northern California},
-  author  = {Agrawal, A and Schick, R S and Bjorkstedt, E P and Szerlong, R G
-             and Goslin, M N and Spence, B C and Williams, T H and Burnett, K M},
+  author  = {Agrawal, A. and Schick, R. S. and Bjorkstedt, E. P. and Szerlong, R. G.
+             and Goslin, M. N. and Spence, B. C. and Williams, T. H. and Burnett, K. M.},
   journal = {National Oceanic and Atmospheric Administration},
   year    =  {2005},
 }
@@ -11,7 +11,7 @@
 
 @article{Bjornn1991-zd,
   title   = "Habitat requirements of salmonids in streams",
-  author  = "Bjornn, T C and Reiser, D W",
+  author  = "Bjornn, T. C. and Reiser, D. W.",
   journal = "Influences of Forest and Rangeland Management on Salmonid Fishes
              and their Habitats",
   volume  =  19,
@@ -77,8 +77,8 @@
 @article{Busch2011-uy,
   title   = "Landscape-level model to predict spawning habitat for lower
              Columbia River fall Chinook Salmon (Oncorhynchus tshawytscha)",
-  author  = "Busch, D S and Sheer, M and Burnett, K and Mcelhany, P and Cooney,
-             T",
+  author  = "Busch, D. S. and Sheer, M. and Burnett, K. and Mcelhany, P. and Cooney,
+             T.",
   journal = "River Research Applications",
   volume  =  29,
   pages   = "291--312",
@@ -93,7 +93,7 @@
 
 @article{Chudyk1979,
   title   = "Suskwa River Steelhead Trout: The Colonization of Harold-Price Creek with Hatchery-Reared Steelhead",
-  author  = "Chudyk, W.E",
+  author  = "Chudyk, W. E.",
   journal = "Skeena Fisheries Report",
   volume  =  79-1,
   year    =  1979,
@@ -105,7 +105,7 @@
   title   = "Appendix C: Interior Columbia basin stream type Chinook Salmon and
              Steelhead populations: habitat intrinsic potential analysis.
              National Oceanic and Atmospheric Administration",
-  author  = "Cooney, T and Holzer, D",
+  author  = "Cooney, T. and Holzer, D.",
   year    =  2006,
   address = "Northwest Fisheries Center",
   publisher = "Northwest Fisheries Center"
@@ -137,7 +137,7 @@
 
 @book{Lake1999-tl,
   title  = "Activity and spawning behaviour in spawning Sockeye salmon. Thesis",
-  author = "Lake, R G",
+  author = "Lake, R. G.",
   year   =  1999,
   publisher = "UBC"
 }
@@ -151,7 +151,7 @@
 
 @book{Gitxsan2019,
   title  = "Release: Gitxsan chiefs Extend Fishing Ban to 2020 & Urge Canada, BC and Ministries to Step Up",
-  author = "Gitxsan Hulwip Government",
+  author = "{Government, Gitxsan Hulwip}",
   year   =  2019,
   address = "http://gitxsan.ca/release-gitxsan-chiefs-extend-fishing-ban-to-2020-season-urge-canada-bc-and-flnro-to-step-up/"
 }
@@ -159,44 +159,41 @@
 
 @book{Irvine2018,
   title  = "Analysis and priority identification of existing fish passage data: Bulkley River",
-  author = "Irvine, A",
+  author = "Irvine, A.",
   year   =  2018,
   address = "http://a100.gov.bc.ca/pub/acat/public/viewReport.do?reportId=56648"
 }
 
 @book{Irvine2021,
   title  = "Bulkley River and Morice River Watershed Groups Fish Passage Restoration Planning",
-  author = "Irvine, A",
+  author = "Irvine, A.",
   year   =  2021,
   address = "https://www.newgraphenvironment.com/fish_passage_bulkley_2020_reporting/Bulkley.pdf"
 }
 
 @article{Mazany-Wright2021-rz,
   title   = "A Freshwater Connectivity Modelling Framework to Support Barrier
-             Prioritization and Remediation in British Columbia",
-  author  = "Mazany-Wright, N and Norris, S M and Lapointe, N W R and
-             Rebellato, B",
+             Prioritization and Remediation in British Columbia.",
+  author  = "Mazany-Wright, N and Norris, S. M. and Lapointe, N. W. R. and Rebellato, B.",
   journal = "Canadian Wildlife Federation",
   year    =  2021a
 }
-
+ 
 @article{Mazany-Wright2021-hs,
   title   = "Breaking Down Barriers: a Practitioners' Guide to Watershed
-             Connectivity Remediation Planning",
-  author  = "Mazany-Wright, N and Noseworthy, J and Sra, S and Norris, S M and
-             Lapointe, N W",
-  journal = "Canadian Wildlife Federation",
-  year    =  2021c
-}
-
-@article{Mazany-Wright2021-do,
-  title   = "B.C. Fish Passage Restoration Initiative
-          Target Watershed Selection Process: Technical Documentation",
-  author  = "Mazany-Wright, N., S. M. Norris, N. W. R. Lapointe, and B. Rebellato",
+             Connectivity Remediation Planning.",
+  author  = "Mazany-Wright, N and Norris, S. M. and Sra, S. and Noseworthy, J. and Lapointe, N. W. R.",
   journal = "Canadian Wildlife Federation",
   year    =  2021b
 }
-
+ 
+@article{Mazany-Wright2021-do,
+  title   = "B.C. Fish Passage Restoration Initiative
+          Target Watershed Selection Process: Technical Documentation.",
+  author  = "Mazany-Wright, N and Norris, S. M. and Lapointe, N. W. R. and Rebellato, B.",
+  journal = "Canadian Wildlife Federation",
+  year    =  2021c
+}
 
 @article{Mccarthy2015,
   title  = "2015 Inventory of High Priority Culverted Fish Passage Barriers in the Lower/Middle Skeena, Bulkley, Morice, and Babine River Watersheds.",
@@ -206,7 +203,7 @@
 
 @article{Mcmahon1983-rz,
   title  = "Habitat suitability index models: coho salmon.",
-  author = "Mcmahon, T E",
+  author = "Mcmahon, T. E.",
   volume =  29,
   year   =  1983,
   journal = "{U.S}. Department of
@@ -215,7 +212,7 @@
 
 @book{Neuman1977-wg,
   title  = "Minimum acceptable stream flows in British Columbia: a review",
-  author = "Neuman, H R and Newcombe, C P",
+  author = "Neuman, H. R. and Newcombe, C. P.",
   year   =  1977,
   publisher = "Fisheries Management Report No. 70."
 }
@@ -253,7 +250,7 @@
 @book{Porter2008-qd,
   title  = "Developing Fish Habitat Models for {Broad-Scale} Forest Planning in
             the Southern Interior of {B.C}.",
-  author = "Porter, M and Pickard, D and Wieckowski, K and Bryan, K",
+  author = "Porter, M. and Pickard, D. and Wieckowski, K. and Bryan, K.",
   year   =  2008,
   publisher = "{ESSA} Technologies Ltd. and {B.C}.
             Ministry of Environment"
@@ -263,7 +260,7 @@
   title  = "Habitat suitability index models and instream flow suitability
             curves: chinook salmon. {U.S}. Fish and Wildlife Service Biological
             Reports 82",
-  author = "Raleigh, R F and Miller, W J",
+  author = "Raleigh, R. F. and Miller, W. J.",
   year   =  1986,
   publisher = "USFW"
 }
@@ -281,7 +278,7 @@
   title   = "Life history characteristics of freshwater fishes occurring in
              British Columbia and the Yukon, with major emphasis on stream
              habitat characteristics. ",
-  author  = "Roberge, M and Hume, J B M and Minns, C K and Slaney, T",
+  author  = "Roberge, M. and Hume, J. B. M. and Minns, C. K. and Slaney, T.",
   year    =  2002,
   address = "Cultus Lake, British Columbia",
   publisher = "Fisheries and Oceans Canada, Marine
@@ -348,8 +345,8 @@
 @book{Sheer2009-kb,
   title  = "Development and management of fish intrinsic potential data and
             methodologies: State of the {IP} 2008 summary report",
-  author = "Sheer, M B and Busch, D S and Gilbert, E and Bayer, J M and
-            Lanigan, S and Schei, J L and Burnett, K M and Miller, D",
+  author = "Sheer, M. B. and Busch, D. S. and Gilbert, E. and Bayer, J. M. and
+            Lanigan, S. and Schei, J. L. and Burnett, K. M. and Miller, D.",
   year   =  2009,
   publisher = "Pacific Northwest Aquatic Monitoring Partnership Series 2009—4, 56 pp."
 }
@@ -358,7 +355,7 @@
   title     = "Lost watersheds: Barriers, aquatic habitat connectivity, and
                salmon persistence in the Willamette and lower Columbia river
                basins",
-  author    = "Sheer, M B and Steel, E A",
+  author    = "Sheer, M. B. and Steel, E. A.",
   journal   = "Trans. Am. Fish. Soc.",
   publisher = "Wiley",
   volume    =  135,
@@ -378,7 +375,7 @@
 @article{Sloat2017-bp,
   title     = "Stream network geomorphology mediates predicted vulnerability of
                anadromous fish habitat to hydrologic change in southeast Alaska",
-  author    = "Sloat, Matthew R and Reeves, Gordon H and Christiansen, Kelly R",
+  author    = "Sloat, Matthew R. and Reeves, Gordon H. and Christiansen, Kelly R.",
   journal   = "Glob. Chang. Biol.",
   publisher = "Wiley",
   volume    =  23,
@@ -392,7 +389,7 @@
 
 @article{Smith2018,
   title     = "Assessing Barriers to Fish Passage within the Wet'suwet'en First Nation Traditional Territory",
-  author    = "Smith, J",
+  author    = "Smith, J.",
   year      =  2018,
   publisher = "LGL Limited Environmental Research Associates and Yinka Dene Economic Development Limited Partnership Inc",
 
@@ -432,7 +429,7 @@
 @book{Woll2017-vf,
   title     = "A Preliminary Classification and Mapping of Salmon Ecological
                Systems in the Nushagak and Kvichak Watersheds",
-  author    = "Woll, C and Albert, D and Whited, D",
+  author    = "Woll, C. and Albert, D. and Whited, D.",
   publisher = "The Nature Conservancy",
   year      =  2017,
   address   = "Alaska"
