--- a/references.bib
+++ b/references.bib
@@ -155,7 +155,13 @@
   year   =  2019,
   address = "http://gitxsan.ca/release-gitxsan-chiefs-extend-fishing-ban-to-2020-season-urge-canada-bc-and-flnro-to-step-up/"
 }
- 
+
+@book{Hoopes1972,
+  title  = "Selection of Spawning Sites by Sockeye Salmon in Small Streams",
+  author = "Hoopes, D. Y.",
+  year   =  1972,
+  publisher = "Fishery Bulletin"
+} 
 
 @book{Irvine2018,
   title  = "Analysis and priority identification of existing fish passage data: Bulkley River",
