--- a/content/project-overview.qmd
+++ b/content/project-overview.qmd
@@ -99,7 +99,7 @@ The Bulkley River watershed comprises parts of the traditional territories of tw
 
 - Wet’suwet’en peoples– the Wedzin Kwah (Bulkley River watershed) is part of the larger Wet’suwet’en traditional territory. The hereditary territory is governed by a system made up of five clans – Gilseyhu (Big Frog), Laksilyu (Small Frog), Tsayu (Beaver), Gitdumden (Wolf/Bear) and Laksamshu (Fireweed) – each of which comprises multiple Yikhs (House Groups) represented by hereditary chiefs. The Wet’suwet’en steward the land based on Inuk Nu’at’en (Wet'suwet'en law), and the principle of Yintahk, meaning everything is connected to the land (@OfficeWetsuweten2013, @Irvine2021). It is necessary to receive permission from the appropriate bands (Witset First Nation or Wet'suwet'en first Nation, Skin Tyee, Nee Tahi Buhn, or Burns Lake Band), nation representatives (@OfficeWetsuweten2013), and the individual Yikh chiefs for any work to occur on their territory.
 
-The geographic scope of this WCRP was further refined by identifying “naturally accessible" waterbodies, which are defined as waterbodies that focal species should be able to access in the absence of human-made structures (@fig-strseg). Naturally accessible waterbodies were spatially delineated using fish species observation and distribution data, as well as data on "natural barriers", which are waterfalls greater than 5 m in height and gradient barriers based on literature derived, species-specific swimming abilities. These maps were explored by the planning team to incorporate additional local knowledge, ensure accuracy, and finalize the constraints on naturally accessible waterbodies. All other waterbodies were removed from the project scope. The "naturally accessible" waterbodies formed the foundation for all subsequent analyses and planning steps, including mapping and modelling useable habitat types, quantifying the current connectivity status, goal setting, and action planning (@Mazany-Wright2021-rz). 
+The geographic scope of this WCRP was further refined by identifying “naturally accessible" waterbodies, which are defined as waterbodies that focal species should be able to access in the absence of human-made structures (@fig-strseg). Naturally accessible waterbodies were spatially delineated using fish species observation and distribution data, as well as data on "natural barriers", which are waterfalls greater than 5 m in height and gradient barriers based on literature derived, species-specific swimming abilities. These maps were explored by the planning team to incorporate additional local knowledge, ensure accuracy, and finalize the constraints on naturally accessible waterbodies. All other waterbodies were removed from the project scope. The "naturally accessible" waterbodies formed the foundation for all subsequent analyses and planning steps, including mapping and modelling useable habitat types, quantifying the current connectivity status, goal setting, and action planning (@Mazany-Wright2021-rz).) 
 
 
 ![Naturally accessible waterbodies within the Bulkley River watershed. These do not represent useable habitat types, but rather identify the waterbodies within which habitat modelling and structure mapping and prioritization were undertaken.](images/accessible-streams-bulk.png){#fig-strseg}
